# SLPF

./: CMakeLists.txt  README.md
src/: core.cpp  core.h  main.cpp  toolkit.hpp
